# fplutil

./: .gitignore  .gitmodules  README.md  android_8py.html  android__utils_8h_source.html  android_ndk_perf.html  build_all_android.html  buildutil_api_reference.html  buildutil_examples.html  buildutil_examples_android_code.html  buildutil_examples_linux_code.html  buildutil_overview.html  classbuildutil_1_1android_1_1_adb_device-members.html  classbuildutil_1_1android_1_1_adb_device.html  classbuildutil_1_1android_1_1_android_manifest-members.html  classbuildutil_1_1android_1_1_android_manifest.html  classbuildutil_1_1android_1_1_android_manifest_1_1_missing_activity_error-members.html  classbuildutil_1_1android_1_1_android_manifest_1_1_missing_activity_error.html  classbuildutil_1_1android_1_1_build_environment-members.html  classbuildutil_1_1android_1_1_build_environment.html  classbuildutil_1_1android_1_1_build_xml-members.html  classbuildutil_1_1android_1_1_build_xml.html  classbuildutil_1_1android_1_1_x_m_l_file-members.html  classbuildutil_1_1android_1_1_x_m_l_file.html  classbuildutil_1_1common_1_1_adb_error-members.html  classbuildutil_1_1common_1_1_adb_error.html  classbuildutil_1_1common_1_1_build_environment-members.html  classbuildutil_1_1common_1_1_build_environment.html  classbuildutil_1_1common_1_1_configuration_error-members.html  classbuildutil_1_1common_1_1_configuration_error.html  classbuildutil_1_1common_1_1_error-members.html  classbuildutil_1_1common_1_1_error.html  classbuildutil_1_1common_1_1_sub_command_error-members.html  classbuildutil_1_1common_1_1_sub_command_error.html  classbuildutil_1_1common_1_1_tool_path_error-members.html  classbuildutil_1_1common_1_1_tool_path_error.html  classbuildutil_1_1linux_1_1_build_environment-members.html  classbuildutil_1_1linux_1_1_build_environment.html  classfpl_1_1_index_allocator-members.html  classfpl_1_1_index_allocator.html  (+679 more)
autobuild/: build_android  build_android.cmd  build_android.py
buildutil/: __init__.py  android.py  android_common.mk  android_test.py  cmake_common.txt  common.py  common_test.py  linux.py  linux_test.py  test_android.py  test_common.py  test_linux.py
disttools/: __init__.py  config.json  push_package.py
docs/: __init__.py  generate_docs.cmd  generate_docs.py  generate_docs.sh  py_filter  py_filter.bat
docs/src/: doxyfile  doxygen_layout.xml  footer.html  header.html  index.md  iossdkversions.js  prereqisites.md  style.css  tested_ios_sdk_versions.json
docs/src/buildutil/: api_reference.md  examples.md  examples_android.md  examples_linux.md  overview.md
docs/src/libfplutil/: examples.md  linking.md  main.md  overview.md  print.md
docs/src/tools/: android_ndk_perf.md  build_all_android.md
examples/buildutil/android/: build.py
examples/buildutil/linux/: build.py  main.c
examples/buildutil_example/android/: build.py
examples/buildutil_example/linux/: CMakeLists.txt  build.py  main.c
examples/libfplutil_example/: AndroidManifest.xml  main.c
examples/libfplutil_example/jni/: Android.mk  Application.mk
fbx_common/: CMakeLists.txt  cmake_fbx.txt
fbx_common/include/fbx_common/: fbx_common.h  fbx_sdk_no_warnings.h
fbx_common/src/: fbx_common.cpp
include/gtest/internal/: gtest-port.h
libandroid_util/include/: AndroidLogPrint.h  AndroidMainWrapper.h
libandroid_util/jni/: Android.mk  Application.mk
libandroid_util/src/: AndroidLogPrint.c  AndroidMainWrapper.c
libfplutil/: CMakeLists.txt
libfplutil/include/fplutil/: android_utils.h  file_utils.h  index_allocator.h  intrusive_list.h  main.h  mutex.h  print.h  string_utils.h  variable_size.h  version.h
libfplutil/jni/: Android.mk  Application.mk
libfplutil/jni/libs/googletest/: Android.mk  Application.mk
libfplutil/src/: android_utils.cpp  file_utils.cpp  main.c  print.c  print_cxx.cc  string_utils.cpp
libfplutil/tests/: AndroidManifest.xml  CMakeLists.txt  test_index_allocator.cc  test_intrusive_list.cc  test_main.cc  test_perrormsg.cc  test_stdio.cc
libfplutil/tests/jni/: Android.mk  Application.mk
libfplutil/unit_tests/: CMakeLists.txt
libfplutil/unit_tests/test_index_allocator/: AndroidManifest.xml  test_index_allocator.cc
libfplutil/unit_tests/test_index_allocator/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_intrusive_list/: AndroidManifest.xml  test_intrusive_list.cc
libfplutil/unit_tests/test_intrusive_list/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_main/: AndroidManifest.xml  test_main.cc
libfplutil/unit_tests/test_main/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_perrormsg/: AndroidManifest.xml  test_perrormsg.cc
libfplutil/unit_tests/test_perrormsg/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_stdio/: AndroidManifest.xml  test_stdio.cc
libfplutil/unit_tests/test_stdio/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_string/: AndroidManifest.xml  test_string.cc
libfplutil/unit_tests/test_string/jni/: Android.mk  Application.mk
libfplutil/unit_tests/test_variable_size/: AndroidManifest.xml  test_variable_size.cc
libfplutil/unit_tests/test_variable_size/jni/: Android.mk  Application.mk
perf/tools/telemetry/telemetry/core/platform/profiler/perf_vis/: LICENSE-jquery.txt  perf-vis  perf-vis-template.html  perf-vis.cmd  perf-vis.js  perf-vis.py  perf_to_tracing.py  perf_to_tracing_json.cmd  perf_to_tracing_json.py  perf_vis.py  sequences.js
perfutil/: ndk-perf.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_63.js  all_6e.js  all_7.js  all_70.js  all_73.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_62.js  classes_7.js  classes_78.js  classes_8.js  classes_a.js  enums_0.js  (+58 more)
setuputil/: android.py  common.py  linux.py  mac.py  util.py  windows.py
